Minor fixes for scrollbars in worklog flat data tab and some improvements in base libraries. Removed activeTab permission to resolve publishing issue in web store

--- a/src/gadgets/WorklogGadget/WorklogGadget.scss
+++ b/src/gadgets/WorklogGadget/WorklogGadget.scss
@@ -1,6 +1,6 @@
 .worklog-gadget-container {
   .scroll-table-container {
-    height: calc(100vh - 134px);
+    height: calc(100vh - 167px);
     overflow: auto;
   }
 
